--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Random Question Generator</title>
+    <link href="Resources/CSS/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Random Question Generator</h1>
