--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Random Question Generator</h1>
+    <h1 align="justify">Random Question Generator</h1>
     <p id="question"></p>
     <button onclick="getQuestion()">Get Question</button>
 
