--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1 align="justify">Random Question Generator</h1>
-    <p id="question"></p>
-    <button onclick="getQuestion()">Get Question</button>
+    <div class="container">
+      <div class="element1">
+        <h1 align="justify">Random Question Generator</h1>
+      </div>
+      <div class="element2">
+        <p id="question"></p>
+      </div>
+      <div class="element3">
+        <button onclick="getQuestion()">Get Question</button>
+      </div>
 
     <script>
       function getQuestion() {
