--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta name="viewport" content="=width=device-width, initial-scale=1.0">
     <title>Random Question Generator</title>
-    <link href="src/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
         <h1>Random Question Generator</h1>
         <p id="question"></p>
-        <button onclick="getQuestion()">Get Question</button>
+        <div>
+          <button onclick="getQuestion()">Get Question</button>
+        </div>
 
     <script>
       function getQuestion() {
