--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <meta name="viewport" content="=width=device-width, initial-scale=1.0">
-    <title>Random Question Generator</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <title>99 Questions for Dordie and Kolaraki</title>
+    <link href="src/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
-        <h1>Random Question Generator</h1>
+        <h1>99 Questions for Dordie and Kolaraki</h1>
         <p id="question"></p>
         <div>
-          <button onclick="getQuestion()">Get Question</button>
+          <button onclick="getQuestion()">Get Fun Question</button>
+          <button onclick="getQuestion()">Get Deep Question</button>
         </div>
 
     <script>
