--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <h1>99 Questions for Dordie and Kolaraki</h1>
       <p id="question"></p>
       <div>
-        <button onclick="getFunQuestion()">Get Fun Question</button>
-        <button onclick="getDeepQuestion()">Get Deep Question</button>
-       </div>
+        <button id="fun" onclick="getFunQuestion()">Get Fun Question</button>
+        <button id="deep" onclick="getDeepQuestion()">Get Deep Question</button>
+      </div>
       <script>
       </script>
     </div>
