--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="=width=device-width, initial-scale=1.0">
-    <title>99 Questions for Dordie and Kolaraki</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <script src="css/javascript.js" type = "text/javascript"></script> 
-  </head>
-  <body>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="=width=device-width, initial-scale=1.0">
+  <title>99 Questions for Dordie and Kolaraki</title>
+  <link href="src/style.css" rel="stylesheet">
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<body>
     <div class="container">
       <h1>99 Questions for Dordie and Kolaraki</h1>
       <p id="question"></p>
@@ -18,4 +20,8 @@
       </script>
     </div>
   </body>
+<!-- partial -->
+<script src="src/javascript.js"></script> 
+
+</body>
 </html>
