--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="=width=device-width, initial-scale=1.0">
   <title>99 Questions for Dordie and Kolaraki</title>
-  <link href="src/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -21,7 +21,7 @@
     </div>
   </body>
 <!-- partial -->
-<script src="src/javascript.js"></script> 
+<script src="css/javascript.js"></script> 
 
 </body>
 </html>
